[package]
name = "chat_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
axum = { version = "0.8.4", features = ["ws"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
# In your [dependencies] section
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }